fix(mobile css): fixed css on mobile with screen widths

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -16,7 +16,7 @@
   padding-top: 10px;
 }
 
-.nav-bar > img{
+.navbar-image {
   height: 90px;
 }
 
@@ -27,4 +27,15 @@
 
 .links {
   padding-left: 15px;
+}
+
+@media (max-width:600px) {
+  .navbar-image {
+    height: 60px;
+  } 
+
+  .flags {
+    height: 20px;
+    padding-left: 10px;
+  }
 }
