--- a/src/app/pages/quiz/quiz.component.css
+++ b/src/app/pages/quiz/quiz.component.css
@@ -7,15 +7,14 @@
 }
 
 .pokemon-image {
-  min-height: 475px;
+  height: 475px;
 }
 
 .skeleton-image {
-  min-height: 475px;
+  height: 475px;
   width: 475px;
   border-radius: 10px;
   display: inline-block;
-  height: 1em;
   position: relative;
   overflow: hidden;
   background-color: red;
@@ -24,7 +23,7 @@
 
 .answer-input {
   width: 200px;
-  margin-top: 10px;
+  margin-top: 15px;
   padding: 5px;
 }
 
@@ -40,6 +39,7 @@
 
 .button-container > button {
   width: 50%;
+  height: 30px;
 }
 
 .pokemon-answer {
@@ -59,5 +59,15 @@
 
   100% {
     background-color: hsl(200deg 20% 95%);
+  }
+}
+
+@media (max-width:600px) {
+  .pokemon-image {
+    height: 300px;
+  }
+
+  .skeleton-image {
+    height: 300px;
   }
 }
